# lente-gestor

./: .env.example  .gitignore  Makefile  README.md  cloudbuild.yaml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: deps.py  schemas.py
backend/app/api/routes/: __init__.py  arrecadacao.py  chat.py  contratacoes.py  contratos.py  fornecedores.py  itens_pca.py  municipio.py  orcamento.py  orgaos.py
backend/app/connectors/: ibge.py  municipio_online.py  pncp.py  siconfi.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/models/: arrecadacao.py  contratacoes.py  orcamento.py  rag.py
backend/app/services/: indicadores_fiscais.py  ingestao_arrecadacao.py  ingestao_arrecadacao_historica.py  ingestao_ibge.py  ingestao_orcamento.py  ingestao_pncp.py  orcamento_funcoes.py
backend/app/services/rag/: __init__.py  client.py  cobertura.py  gerador.py  indexador.py  prompts.py  ranking.py  (+3 more)
backend/scripts/: _rag_auto_reindex.py  ingest_arrecadacao.py  ingest_arrecadacao_dca.py  ingest_ibge.py  ingest_orcamento.py  ingest_pncp.py  ingest_rag.py  ingest_rgf.py
backend/tests/: conftest.py  test_api.py  test_api_chat_validacao.py  test_api_orcamento.py  test_health.py  test_ingestao.py  test_ingestao_arrecadacao.py  test_ingestao_ibge.py  test_ingestao_orcamento.py  test_ingestao_rgf.py  test_rag_citacoes.py  test_rag_integracao.py  test_rag_prompts.py  test_rag_renderizadores.py  test_rag_tools.py
backend/tests/rag/: golden_set.yaml
(+62 files in other folders)
